--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Shared/_ColumnsTwo.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Shared/_ColumnsTwo.cshtml
@@ -45,7 +45,7 @@
             <!--Social like boxes-->
             <div id="vk_groups"></div>
             <script type="text/javascript">
-            VK.Widgets.Group("vk_groups", {mode: 1, width: "220", color1: 'FFFFFF', color2: '2B587A', color3: '244A72'}, 48158159);
+            VK.Widgets.Group("vk_groups", {mode: 1, width: "220", height: "400", color1: 'FFFFFF', color2: '2B587A', color3: '5B7FA6'}, 48158159);
             </script>
             <div id="fb-root"></div>
             <script>(function(d, s, id) {
@@ -55,7 +55,7 @@
               js.src = "//connect.facebook.net/ru_RU/sdk.js#xfbml=1&version=v2.0";
               fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));</script>
-            <div class="fb-like" data-href="https://www.facebook.com/zelectroblog" data-width="220" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+            <div class="fb-like" data-href="https://www.facebook.com/zelectroblog" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
         }
     </div>
     <div id="main">
