--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Catalog/CategoryNavigation.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Catalog/CategoryNavigation.cshtml
@@ -25,7 +25,7 @@
 {
     <li>
         @{
-            if (category.Id == Model.CurrentCategoryId)
+            if (BreadCrumbContainsCurrentCategoryId(category))
             {
                 <span>@category.Name</span>
             }
