markup Sorting by availability+position

--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Catalog/CategoryNavigation.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Catalog/CategoryNavigation.cshtml
@@ -27,7 +27,7 @@
         @{
             if (BreadCrumbContainsCurrentCategoryId(category))
             {
-                <span>@category.Name</span>
+                <a class="current" href="@Url.RouteUrl("Category", new { SeName = category.SeName })">@category.Name</a>
             }
             else
             {
