--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/ShoppingCart/OrderTotals.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/ShoppingCart/OrderTotals.cshtml
@@ -1,11 +1,10 @@
 ﻿@model OrderTotalsModel
 @using Nop.Web.Models.ShoppingCart;
 <div class="sum-info">
-    <div>@T("ShoppingCart.Totals.SubTotal"): @Model.SubTotal руб</div>
     <div>@T("ShoppingCart.Totals.OrderTotal"): 
         @if (!String.IsNullOrEmpty(Model.OrderTotal))
         {
-            <span class="product-price order-total"><strong>@Model.OrderTotal руб</strong></span>
+            <span class="product-price order-total"><strong>@Model.OrderTotal</strong></span>
         }
         else
         {
