--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
@@ -25,7 +25,7 @@
         @if (Model.SubCategories.Count > 0)
         {
             <ul class="subcategories">
-                <li><span>Все</span></li>
+                <li><span class="current">Все</span></li>
                 @foreach (var item in Model.SubCategories)
                 {
                     <li><a href="@Url.RouteUrl("Category", new {SeName = item.SeName})">@item.Name</a></li>
@@ -42,7 +42,7 @@
                     <li>
                         @if (item.Id == Model.Id)
                         {
-                            <span>@item.Name</span>
+                             <span class="current">@item.Name</span>
                         }
                         else
                         {
