--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Shared/_ProductBox.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Shared/_ProductBox.cshtml
@@ -30,7 +30,7 @@
         {
             if (Model.ProductPrice.StockQuantity == 0)
             {
-                <input type="button" class="prod-box-priceblock-btn notinstock" onclick="AjaxCart.addproducttocart_catalog('@addtocartlink');return false;" />
+                <input type="button" class="button notinstock" onclick="AjaxCart.addproducttocart_catalog('@addtocartlink');return false;" value="@T("ShoppingCart.OutOfStock")" />
             }
             else
             {
