--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/ShoppingCart/OrderSummary.cshtml
@@ -28,62 +28,248 @@
 @*we add enctype = "multipart/form-data" because "File upload" attribute control type requires it*@
         using (Html.BeginRouteForm("ShoppingCart", FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
-            <table class="products-cart">
-                <tr>
-                    <th width="50%">@T("ShoppingCart.Product(s)")</th>
-                    <th width="12%">@T("ShoppingCart.UnitPrice")</th>
-                    <th width="20%">@T("ShoppingCart.Quantity")</th>
-                    <th width="13%">@T("ShoppingCart.ItemTotal")</th>
-                    <th width="5%"></th>
+        <table class="cart">
+            <colgroup>
+                @if (Model.IsEditable)
+                {
+                    <col width="1" />
+                }
+                @if (Model.ShowSku)
+                {
+                    <col width="1" />
+                }
+                @if (Model.ShowProductImages)
+                {
+                    <col width="1" />
+                }
+                <col />
+                <col width="1" />
+                <col width="1" />
+                <col width="1" />
+            </colgroup>
+            <thead>
+                <tr class="cart-header-row">
+                    @if (Model.IsEditable)
+                    {
+                        <th>
+                            @T("ShoppingCart.Remove")
+                        </th>
+                    }
+                    @if (Model.ShowSku)
+                    {
+                        <th>
+                            @T("ShoppingCart.SKU")
+                        </th>
+                    }
+                    @if (Model.ShowProductImages)
+                    {
+                        <th class="picture"></th>
+                    }
+                    <th>
+                        @T("ShoppingCart.Product(s)")
+                    </th>
+                    <th>
+                        @T("ShoppingCart.UnitPrice")
+                    </th>
+                    <th>
+                        @T("ShoppingCart.Quantity")
+                    </th>
+                    <th class="end">
+                        @T("ShoppingCart.ItemTotal")
+                    </th>
                 </tr>
+            </thead>
+            <tbody>
                 @foreach (var item in Model.Items)
                 {
-                    <tr>
-                        <td><img alt="@item.Picture.AlternateText" src="@item.Picture.ImageUrl" /> <span>@item.ProductName</span></td>
-                        <td>@item.UnitPrice руб</td>
-                        <td><input name="itemquantity@(item.Id)" type="text" value="@(item.Quantity)"></td>
-                        <td>@item.SubTotal</td>
-                        <td><img class="delete" src="@deleteImgSrc" /></td>
-                    </tr>
-                }
-            </table>
-            @Html.Action("OrderTotals", "ShoppingCart", new {isEditable = Model.IsEditable})
+                    <tr class="cart-item-row">
+                        @if (Model.IsEditable)
+                        {
+                            <td class="remove-from-cart">
+                                <span class="td-title">@T("ShoppingCart.Remove"):</span>
+                                <input type="checkbox" name="removefromcart" value="@(item.Id)" />
+                            </td>
+                        }
+                        @if (Model.ShowSku)
+                        {
+                            <td class="sku nobr">
+                                <span class="td-title">@T("ShoppingCart.SKU"):</span>
+                                @item.Sku
+                            </td>
+                        }
+                        @if (Model.ShowProductImages)
+                        {
+                            <td class="product-picture">
+                                <img alt="@item.Picture.AlternateText" src="@item.Picture.ImageUrl" title="@item.Picture.Title" />
+                            </td>
+                        }
+                        <td class="product">
+                            <a href="@Url.RouteUrl("Product", new { SeName = item.ProductSeName })" class="product-name">@item.ProductName</a>
+                            @if (!String.IsNullOrEmpty(item.AttributeInfo))
+                            {
+                                <div class="attributes">
+                                    @Html.Raw(item.AttributeInfo)
+                                </div>
+                            }
+                            @if (!String.IsNullOrEmpty(item.RecurringInfo))
+                            {
+                                <div class="recurring-info">
+                                    @Html.Raw(item.RecurringInfo)
+                                </div>
+                            }
+                            @if (Model.IsEditable && item.AllowItemEditing)
+                            {
+                                var editCartItemUrl = Url.RouteUrl("Product", new {SeName = item.ProductSeName});
+                                editCartItemUrl = webHelper.ModifyQueryString(editCartItemUrl, "updatecartitemid=" + item.Id, null);
+                                <div class="edit-item">
+                                    <a href="@editCartItemUrl">@T("Common.Edit")</a>
+                                </div>
+                            }
+                            @if (item.Warnings.Count > 0)
+                            {
+                                <div class="message-error">
+                                    <ul>
+                                        @for (int i = 0; i < item.Warnings.Count; i++)
+                                        {
+                                            <li>@item.Warnings[i]</li>
+                                        }
+                                    </ul>
+                                </div>
+                            }
+                        </td>
+                        <td class="unit-price nobr">
+                            <span class="td-title">@T("ShoppingCart.UnitPrice"):</span>
+                            <span class="product-unit-price">@item.UnitPrice</span>
+                        </td>
+                        <td class="qty nobr">
+                            <span class="td-title">@T("ShoppingCart.Quantity"):</span>
+                            @if (Model.IsEditable)
+                            {
+                                if (item.AllowedQuantities.Count > 0)
+                                {
+                                    <select name="itemquantity@(item.Id)" class="qty-dropdown">
+                                        @foreach (var qty in item.AllowedQuantities)
+                                        {
+                                            <option selected="@qty.Selected" value="@qty.Value">@qty.Value</option>
+                                        }
+                                    </select>
+                                }
+                                else
+                                {
+                                    <input name="itemquantity@(item.Id)" type="text" value="@(item.Quantity)" class="qty-input" />
+                                }
 
-            <table class="order-form">
-                    <tr>
-                        <td>Имя и фамилия</td>
-                        <td><input type="text" name="fio" /></td>
+                            }
+                            else
+                            {
+                                <span>@item.Quantity</span>
+                            }
+                        </td>
+                        <td class="subtotal nobr end">
+                            <span class="td-title">@T("ShoppingCart.ItemTotal"):</span>
+                            <span class="product-subtotal">@item.SubTotal</span>
+                            @if (!String.IsNullOrEmpty(item.Discount))
+                            {
+                                <div class="discount">
+                                    @T("ShoppingCart.ItemYouSave"): @item.Discount
+                                </div>
+                            }
+                        </td>
                     </tr>
-                    <tr>
-                        <td>Контактный телефон <span class="required">*</span></td>
-                        <td><input type="text" name="phone" /></td>
-                    </tr>
-                    <tr>
-                        <td>Город доставки</td>
-                        <td><input type="text" name="city" /></td>
-                    </tr>
-                    <tr>
-                        <td>Адрес доставки</td>
-                        <td><input type="text" name="address" /></td>
-                    </tr>
-                    <tr>
-                        <td class="middle">Комментарий к заказу</td>
-                        <td><textarea name="comment"></textarea></td>
-                    </tr>
-                </table>
-        
-            <div class="checkout-buttons">
-                @if (String.IsNullOrEmpty(Model.MinOrderSubtotalWarning))
+                }
+            </tbody>
+        </table>
+                if (!String.IsNullOrEmpty(Model.CheckoutAttributeInfo))
                 {
-                    <button type="submit" id="checkout" name="checkout" value="checkout" class="button checkout-button">
-                        @T("Checkout.Button")
-                    </button>
+        <div class="selected-checkout-attributes">
+            @Html.Raw(Model.CheckoutAttributeInfo)
+        </div>
+                }
+        <div class="buttons">
+            @if (Model.IsEditable)
+            {
+                <div class="common-buttons">
+                    <input type="submit" name="updatecart" value="@T("ShoppingCart.UpdateCart")" class="button update-cart-button" />
+                    <input type="submit" name="continueshopping" value="@T("ShoppingCart.ContinueShopping")" class="button continue-shopping-button" />
+                </div>
+                @Html.Partial("_CheckoutAttributes", Model.CheckoutAttributes, new ViewDataDictionary())
+            }
+        </div>
+        <div class="cart-footer">
+            @Html.Widget("order_summary_cart_footer")
+            @if (Model.IsEditable)
+            {
+                if (!String.IsNullOrEmpty(Model.MinOrderSubtotalWarning))
+                {
+                <div>
+                    <div class="min-amount-warning">
+                        @Model.MinOrderSubtotalWarning
+                    </div>
+                </div>
+                }
+            }
+            <div class="cart-collaterals">
+                @if (Model.IsEditable)
+                {
+                    <div class="deals">
+                        @Html.Partial("_DiscountBox", Model.DiscountBox)
+                        @Html.Partial("_GiftCardBox", Model.GiftCardBox)
+                        @Html.Widget("order_summary_content_deals")
+                    </div>
                 }
             </div>
-            <div class="addon-buttons">
-                @*Payment method buttons (e.g. GoogleCheckoutButton, Paypal Express)*@
-                @Html.Partial("_ButtonPaymentMethod", Model)
+            <div class="totals">
+                @Html.Action("OrderTotals", "ShoppingCart", new { isEditable = Model.IsEditable })
+                @if (Model.IsEditable)
+                {
+                    if (Model.TermsOfServiceOnShoppingCartPage)
+                    {
+                        <div id="terms-of-service-warning-box" title="@T("Checkout.TermsOfService")" style="display:none;">
+                            <p>@T("Checkout.TermsOfService.PleaseAccept")</p>
+                        </div>
+                        <div class="terms-of-service">
+                            <input id="termsofservice" type="checkbox" name="termsofservice" />
+                            @T("Checkout.TermsOfService.IAccept")
+                            <span class="read" onclick="javascript:OpenWindow('@Url.RouteUrl("TopicPopup", new { SystemName = "conditionsofuse" })', 450, 500, true)">@T("Checkout.TermsOfService.Read")</span>
+                        </div>
+                    }
+                    <div class="checkout-buttons">
+                        @if (String.IsNullOrEmpty(Model.MinOrderSubtotalWarning))
+                        {
+                            <script type="text/javascript">
+                                $(document).ready(function () {
+                                    $('#checkout').click(function () {
+                                        //terms of service
+                                        var termOfServiceOk = true;
+                                        if ($('#termsofservice').length > 0) {
+                                            //terms of service element exists
+                                            if (!$('#termsofservice').is(':checked')) {
+                                                $("#terms-of-service-warning-box").dialog();
+                                                termOfServiceOk = false;
+                                            } else {
+                                                termOfServiceOk = true;
+                                            }
+                                        }
+                                        return termOfServiceOk;
+                                    });
+                                });
+                            </script>
+                            <button type="submit" id="checkout" name="checkout" value="checkout" class="button-1 checkout-button">
+                                @T("Checkout.Button")
+                            </button>
+                        }
+                    </div>
+                    <div class="addon-buttons">
+                        @*Payment method buttons (e.g. GoogleCheckoutButton, Paypal Express)*@
+                        @Html.Partial("_ButtonPaymentMethod", Model)
+                    </div>
+                }
             </div>
+        </div>
+        if (Model.IsEditable)
+        {
+             @Html.Action("CrossSellProducts", "Product")
+        }
         }
 
     if (Model.IsEditable)
