--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Content/css/style.css
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Content/css/style.css
@@ -96,18 +96,19 @@ h2 {
     background-color:#c00 !important;
 }
 
-.button, .button-1 {
+.button, .button-1, .button-2 {
 	display: inline-block;
 	padding: 5px;
 	background-color: #33C370;
 	border: 0;
     cursor: pointer;
-    color:#fff;
+    color:#fff !important;
 	font-family:Arial, Helvetica, sans-serif;
 	font-weight: 600;
+    text-decoration:none;
 }
 
-.button:hover, .button-1:hover {
+.button:hover, .button-1:hover, .button-2:hover {
 	background-color: #2FB066;
 }
 
@@ -499,6 +500,7 @@ a, a:visited {
 
 .last-products, .popular-products {
 	clear: both;
+    padding-top: 20px;
 }
 
 hr.faded {
@@ -574,7 +576,8 @@ hr.faded {
 }
 
 .subcategories li {
-	display: inline;
+	display: inline-block;
+    margin-bottom: 4px;
 	margin-right: 10px;
 }
 
@@ -665,10 +668,6 @@ hr.faded {
 	float: left;
 }
 
-.prod-top-part {
-	height: 324px;
-}
-
 .main-image img {
 	height: 250px;
 }
@@ -715,7 +714,6 @@ hr.faded {
 }
 
 .product-additional .rating {
-	cursor: pointer;
 	margin-bottom: 8px;
 }
 
@@ -1295,7 +1293,7 @@ table.products-cart td input {
 .order-summary-content .cart .cart-item-row .qty-input,.wishlist-content .cart .cart-item-row .qty-input{border:solid 1px #E3E3E3;font-size:12px;text-align:right;width:40px;}
 .order-summary-content .cart .cart-item-row td .td-title, .wishlist-content .cart .cart-item-row td .td-title{display:none;}
 .order-summary-content .cart .cart-item-row .edit-item a{color:#B80709;}
-.order-summary-content .cart-footer{width:100%;zoom:1;}
+.order-summary-content .cart-footer{width:100%;zoom:1;margin-bottom: 20px;}
 .order-summary-content .cart-footer:after{content:".";display:block;clear:both;height:0;font-size:0;line-height:0;visibility:hidden;}
 .order-summary-content .total-info{margin:0;font-size:12px;}
 .order-summary-content .total-info .selected-shipping-method{font-weight:normal;font-size:11px;}
@@ -1317,11 +1315,48 @@ table.products-cart td input {
 .order-summary-content .checkout-attributes textarea{width:300px;height:150px;}
 .order-summary-content .checkout-button {float: right;font-size: 14px;padding: 10px;margin-top: 5px;}
 
+/* ORDER DETAILS */
+.order-details-page{}
+.order-details-page .page-title{}
+.order-details-page .page-title h1{float:left;}
+.order-details-page .page-title a{float:right;margin-left:10px;}
+.order-details-page .page-title a:hover{text-decoration:none;}
+.order-details-page .title{padding:10px 10px 5px 0;font-weight:700;clear:both;font-size:12px;}
+.order-details-page .page-body{border:1px solid #EEE;padding:10px;}
+.order-details-page .order-overview{text-align:left;padding-bottom:10px;overflow:hidden;}
+.order-details-page .order-overview .order-number{margin-bottom:10px;}
+.order-details-page .order-overview .order-details{float:left;}
+.order-details-page .order-overview .order-details span{display:block;margin-bottom:5px;}
+.order-details-page .order-overview .order-total{text-align:right;}
+.order-details-page .order-details-area{text-align:left;margin:10px;padding:10px;border:1px solid #EEE;height:auto;}
+.order-details-page .order-details-area table{width:100%;border:0px;border-collapse:collapse;border-spacing:0;}
+.order-details-page .order-details-area td{width:50%;vertical-align:top;}
+.order-details-page .order-details-area ul{float:left;margin-right:20px;}
+.order-details-page .order-details-area li{list-style:none;}
+.order-details-page .order-details-area li:first-child{margin-top:0;}
+.order-details-page .repost{margin:10px 0px 10px 0px;}
+.order-details-page .repost .hint{margin:0px;}
+.order-details-page .section{text-align:left;padding:10px;margin-bottom:20px;height:auto;}
+.order-details-page .checkout-attributes{text-align:right;vertical-align:middle;padding:10px;height:auto;}
+.order-details-page .actions{margin:10px 0px 10px 0px;}
+.order-details-page .cart-total-left{color:#000;}
+.order-details-page .order-notes th.createdon{width:30%;}
+.order-details-page .order-notes .download a{color:#B80709;}
+.order-details-page .products td .td-title{display:none;}
+
+/* DATA TABLE */
+.data-table{width:100%;border:1px solid #EEE;border-collapse:collapse;border-spacing:0;empty-cells:show;}
+.data-table th{font-weight:bold;padding:3px 8px;white-space:nowrap;vertical-align:middle;}
+.data-table td{padding:3px 8px;}
+.data-table th,.data-table td{border-bottom:1px solid #EEE;border-right:1px solid #EEE;}
+.data-table .odd{}
+.data-table .even{background-color:#F6F6F6;}
+
 /* ONE PAGE CHECKOUT */
-.opc .buttons{margin-top:0;padding-top:2em;}
+.opc .buttons{margin-top:0;}
 .opc .buttons .back-link{margin-bottom:10px;}
 .opc .buttons .back-link small{display:none;}
-.opc .buttons .back-link a{background:url(images/arrow-up.png) no-repeat left;padding-left:20px;}
+.opc .buttons .back-link a{background:url(../img/arrow-up.png) no-repeat left;padding-left:20px;}
 .opc .buttons.disabled button{display:none;}
 .opc .buttons .please-wait{height:21px;line-height:21px;}
 .opc .ul{list-style:disc outside;padding-left:18px;}
@@ -1400,40 +1435,33 @@ table.products-cart td input {
 .order-progress ul li .inactive-step{color:#d7d7d7;background:url(images/progress-step-inactive.gif) no-repeat 50% 50%;padding-bottom:40px;padding-right:1px;zoom:1;}
 .order-progress ul li a:hover{text-decoration:none;}
 
-.review-rating {
-    margin-top: 20px;
-}
-
-.review-rating ul {
-    margin-top: 20px;
-}
-
-.review-rating ul li {
-    float: left;
-}
-
-.review-rating ul li.first, .review-rating ul li.last {
-    top: 10px;
-    position: relative;
-}
-
-.review-rating ul li input {
-    float: left;
-}
-
-.write-product-review-button {
-    float: right;
-    margin-right: 92px;
-}
-
-.product-review-list {
-    margin-top: 20px;
-}
-
-.product-review-list .title {
-    margin-top: 20px;
-}
-
-#review-form {
-    margin-bottom: 70px;
-}
+/* PRODUCT REVIEWS PAGE */
+.product-reviews-page{}
+.product-reviews-page .page-title{}
+.product-reviews-page .page-title a{text-decoration:none;}
+.product-reviews-page .result{}
+.product-reviews-page .write-review{margin-top:10px;padding:15px;border:1px solid #eee;}
+.product-reviews-page .write-review .title{margin-bottom:10px;font-size:16px;line-height:20px;font-weight:bold;}
+.product-reviews-page .write-review .inputs{margin-bottom:12px;clear:both;}
+.product-reviews-page .write-review .captcha-box{margin-bottom:12px;}
+.product-reviews-page .write-review .inputs label{display:block;}
+.product-reviews-page .write-review .review-title{width:350px;}
+.product-reviews-page .write-review .review-text{width:350px;height:150px;}
+.product-reviews-page .write-review .review-rating{margin-bottom:12px;clear:both;}
+.product-reviews-page .write-review .review-rating label{}
+.product-reviews-page .write-review .review-rating ul{display:inline-block;}
+.product-reviews-page .write-review .review-rating li{display:inline-block;list-style:none;}
+.product-reviews-page .write-review .review-rating input{vertical-align:bottom;}
+.product-reviews-page .write-review .buttons{text-align:left;}
+.product-review-list{margin:10px 0px 10px 0;}
+.product-review-list .title{padding:10px 10px 10px 0;font-weight:700;text-transform:uppercase;font-size:1.1em;color:#3a3a3a;}
+.product-review-list .product-review-item{border:solid 1px #d3d3d3;margin:10px 0 0;padding:10px 10px 20px;clear:both;}
+.product-review-list .product-review-item .review-item-head{clear:both;}
+.product-review-list .product-review-item .review-title{font-weight:700;float:left;margin-bottom:5px;}
+.product-review-list .product-review-item .rating{float:right;margin-right:5px;}
+.product-review-list .product-review-item .review-text{float:left;margin-bottom:5px;clear:both;}
+.product-review-list .product-review-item .review-info{float:left;margin-bottom:5px;clear:both;}
+.product-review-list .product-review-item .review-info .separator{margin:0 2px;}
+.product-review-helpfulness{font-size:11px;color:#333;clear:both;}
+.product-review-helpfulness .vote{color:#B80709;font-weight:700;text-decoration:none;}
+.product-review-helpfulness .vote:hover{cursor:pointer;text-decoration:none;}
