--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Common/Footer.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Common/Footer.cshtml
@@ -12,13 +12,14 @@
             <ul class="footer-left">
                 <li><h2>Как заказать?</h2></li>
                 <li><a href="@Url.RouteUrl("Topic", new {SeName = Html.GetTopicSeName("shippinginfo") })">@T("ShippingReturns")</a></li>
+                <li><a href="@Url.RouteUrl("Topic", new {SeName = Html.GetTopicSeName("payment") })">@T("PaymentInfo")</a></li>
                 <li><a href="@Url.RouteUrl("ShoppingCart")">Корзина</a></li>
             </ul>
             <ul class="footer-center">
                 <li><h2>Вступай в сообщество</h2></li>
-                <li><a href="@Url.RouteUrl("Topic", new {SeName = Html.GetTopicSeName("aboutus") })">@T("AboutUs")</a></li>
                 <li><a href="http://zelectro.cc">Статьи и обзоры</a></li>
-                <li><a href="http://vk.com/zelectro">Группа Вконтакте</a></li>
+                <li><a href="http://vk.com/zelectro">Вконтакте</a></li>
+                <li><a href="http://vk.com/zelectro">Facebook</a></li>
             </ul>
             <ul class="footer-right">
                 <li><h2>Как с нами связаться?</h2></li>
