--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/ShoppingCart/OrderTotals.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/ShoppingCart/OrderTotals.cshtml
@@ -1,15 +1,120 @@
 ﻿@model OrderTotalsModel
 @using Nop.Web.Models.ShoppingCart;
-<div class="sum-info">
-    <div>@T("ShoppingCart.Totals.OrderTotal"): 
-        @if (!String.IsNullOrEmpty(Model.OrderTotal))
-        {
-            <span class="product-price order-total"><strong>@Model.OrderTotal</strong></span>
-        }
-        else
-        {
-            <span>@T("ShoppingCart.Totals.CalculatedDuringCheckout")</span>
-        }    
-    </div>
+<div class="total-info">
+    <table class="cart-total">
+        <tbody>
+            <tr>
+                <td class="cart-total-left">
+                    <span class="nobr">@T("ShoppingCart.Totals.SubTotal"):</span>
+                </td>
+                <td class="cart-total-right">
+                    <span class="nobr"><span class="product-price">@Model.SubTotal</span> </span>
+                </td>
+            </tr>
+            @if (!String.IsNullOrEmpty(Model.SubTotalDiscount))
+            {
+                <tr>
+                    <td class="cart-total-left">
+                        <span class="nobr">
+                            @T("ShoppingCart.Totals.SubTotalDiscount")
+                            @if (Model.AllowRemovingSubTotalDiscount)
+                            {
+                                /*empty value (little hack for FormValueExistsAttribute)*/
+                                <input type="submit" name="removesubtotaldiscount" value=" " title="@T("Common.Remove")" class="remove-discount-button" />
+                            }
+                            :
+                        </span>
+                    </td>
+                    <td class="cart-total-right">
+                        <span class="nobr"><span class="product-price">@Model.SubTotalDiscount</span> </span>
+                    </td>
+                </tr>
+            }
+            <tr>
+                <td class="cart-total-left">
+                    <span class="nobr">
+                        @T("ShoppingCart.Totals.Shipping"):
+                    </span>
+                    @if (Model.RequiresShipping && !String.IsNullOrEmpty(Model.SelectedShippingMethod))
+                    {
+                        <span class="selected-shipping-method">
+                            @T("ShoppingCart.Totals.Shipping.Method", Model.SelectedShippingMethod)
+                        </span>
+                    }
+                </td>
+                <td class="cart-total-right">
+                    <span class="nobr">
+                        @if (Model.RequiresShipping)
+                        {
+                            if (!String.IsNullOrEmpty(Model.Shipping))
+                            {
+                                <span class="product-price">
+                                    @Model.Shipping
+                            </span>
+                            }
+                            else
+                            {
+                                <span>@T("ShoppingCart.Totals.CalculatedDuringCheckout")</span>
+                            }
+                        }
+                        else
+                        {
+                            <span>@T("ShoppingCart.Totals.Shipping.NotRequired")</span>
+                        }
+                    </span>
+                </td>
+            </tr>
+            @if (!String.IsNullOrEmpty(Model.PaymentMethodAdditionalFee))
+            {
+                <tr>
+                    <td class="cart-total-left">
+                        <span class="nobr">@T("ShoppingCart.Totals.PaymentMethodAdditionalFee"):</span>
+                    </td>
+                    <td class="cart-total-right">
+                        <span class="nobr">
+                            <span class="product-price">@Model.PaymentMethodAdditionalFee</span>
+                        </span>
+                    </td>
+                </tr>
+            }
+            @if (Model.DisplayTaxRates && Model.TaxRates.Count > 0)
+            {
+                foreach (var taxRate in Model.TaxRates)
+                {
+                    <tr>
+                        <td class="cart-total-left">
+                            <span class="nobr">
+                                @string.Format(T("ShoppingCart.Totals.TaxRateLine").Text, taxRate.Rate)
+                                :
+                            </span>
+                        </td>
+                        <td class="cart-total-right">
+                            <span class="nobr">
+                                @taxRate.Value
+                            </span>
+                        </td>
+                    </tr>
+                }
+            }
+            <tr>
+                <td class="cart-total-left">
+                    <span class="nobr">
+                        @T("ShoppingCart.Totals.OrderTotal"):
+                    </span>
+                </td>
+                <td class="cart-total-right">
+                    <span class="nobr">
+                        @if (!String.IsNullOrEmpty(Model.OrderTotal))
+                        {
+                            <span class="product-price order-total"><strong>@Model.OrderTotal</strong></span>
+                        }
+                        else
+                        {
+                            <span>@T("ShoppingCart.Totals.CalculatedDuringCheckout")</span>
+                        }
+                    </span>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
-
