--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Content/css/style.css
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Content/css/style.css
@@ -93,7 +93,7 @@ h2 {
 }
 
 .notinstock {
-    background-color:#c00 !important;
+    background-color:#888888 !important;
 }
 
 .button, .button-1, .button-2 {
