--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Catalog/TopMenu.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Catalog/TopMenu.cshtml
@@ -9,7 +9,7 @@
     @Html.Widget("header_menu_before")
 
     <li><a href="@Url.RouteUrl("Topic", new {SeName = Html.GetTopicSeName("shippinginfo") })">@T("ShippingReturns")</a></li>
-    <li><a href="@Url.RouteUrl("Topic", new {SeName = Html.GetTopicSeName("payment") })">@T("PaymentInfo")</a></li>
+    <li><a href="@Url.RouteUrl("Topic", new {SeName = Html.GetTopicSeName("paymentinfo") })">@T("PaymentInfo")</a></li>
     <li><a href="@Url.RouteUrl("ContactUs")">@T("ContactUs")</a></li>
     <li><a href="http://zelectro.cc/">Статьи и обзоры</a></li>
     <li class="right" id="topcartlink">
