--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
@@ -68,4 +68,7 @@
         </div>
         @Html.Widget("categorydetails_bottom", Model.Id)
     </div>
+    <div class="seo-block description container">
+        @Html.Raw(Model.Description)
+    </div>
 </div>
