--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Common/Footer.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Common/Footer.cshtml
@@ -27,7 +27,12 @@
                 <li>+7 978 804-78-27</li>
                 <li><a href="mailto:support@zelectro.cc">support@zelectro.cc</a></li>
             </ul>
+            <div class="footer-poweredby">
+                © 2013-2015 Интернет-магазин Zelectro. Все права защищены. Powered by <a href="http://www.nopcommerce.com/">nopCommerce</a>
+                @*Would you like to remove the "Powered by nopCommerce" link in the bottom of the footer?
+            Find more info here http://www.nopcommerce.com/copyrightremoval.aspx*@
+            </div>
         </div>
     </div>
 </div>
-    <!-- /footer -->
+<!-- /footer -->
