--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Home/Index.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Home/Index.cshtml
@@ -17,10 +17,8 @@
             </div>
         </div>
         @Html.Widget("home_page_bottom")
-        <div class="seo-block">
-            <div class="container">
+        <div class="seo-block description container">
                 @Html.Action("TopicBlock", "Topic", new { systemName = "HomePageText" })
-            </div>
         </div>
     </div>
 </div>
