--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Product/HomepageBestSellers.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Product/HomepageBestSellers.cshtml
@@ -19,10 +19,9 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $("#bestsellers-carousel").owlCarousel({
-
+            baseClass: "owl-with-buttons",
             navigation: true,
             navigationText: ['', '']
-
         });
     });
 </script>
