--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Product/HomepageProducts.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Product/HomepageProducts.cshtml
@@ -20,7 +20,7 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $("#homepage-carousel").owlCarousel({
-
+            baseClass: "owl-with-buttons",
             navigation: true,
             navigationText: ['', '']
 
