--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Product/ProductsAlsoPurchased.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Product/ProductsAlsoPurchased.cshtml
@@ -20,10 +20,9 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $("#alsopurchased-carousel").owlCarousel({
-
+            baseClass: "owl-with-buttons",
             navigation: true,
             navigationText: ['', '']
-
         });
     });
 </script>
