--- a/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Product/RelatedProducts.cshtml
+++ b/src/Presentation/Nop.Web/Themes/DefaultClean/Views/Product/RelatedProducts.cshtml
@@ -18,10 +18,9 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $("#related-products-carousel").owlCarousel({
-
+            baseClass: "owl-with-buttons",
             navigation: true,
             navigationText: ['', '']
-
         });
     });
 </script>
